# franklin-templeton-prep

./: .gitignore  README.md  data.dvc  main.py
sql-finance-copilot/: .gitignore  README.md  finance.db  pyproject.toml  requirements.txt  seed_db.py
sql-finance-copilot/scripts/: generate_synthetic_financials.py  introspect_schema.py  run_pipeline.py  run_streamlit.sh  seed_postgres.py
sql-finance-copilot/src/sql_finance_copilot/: __init__.py  config.py  logging_config.py
sql-finance-copilot/src/sql_finance_copilot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sql-finance-copilot/src/sql_finance_copilot/api/: dependencies.py  main.py  middleware.py  schemas.py
sql-finance-copilot/src/sql_finance_copilot/app/: __init__.py  frontend_models.py  frontend_ui.py  streamlit_app.py
sql-finance-copilot/src/sql_finance_copilot/charts/: __init__.py  builder.py  renderer.py
sql-finance-copilot/src/sql_finance_copilot/core/: models.py  orchestrator.py  repair_loop.py
sql-finance-copilot/src/sql_finance_copilot/database/: __init__.py  engine.py
sql-finance-copilot/src/sql_finance_copilot/db/: engine.py  executor.py  introspection.py
sql-finance-copilot/src/sql_finance_copilot/execution/: __init__.py  executor.py  query_runner.py
sql-finance-copilot/src/sql_finance_copilot/llm/: __init__.py  groq_client.py  prompts.py  sql_generator.py  sql_repair.py
sql-finance-copilot/src/sql_finance_copilot/repair/: __init__.py  (+2 more)
sql-finance-copilot/tests/: conftest.py  test_executor.py  test_retrieval_examples.py  test_runtime.py  test_security_attacks.py  test_validation.py
(+304 files in other folders)
